updated with test2

--- a/incident-db/templates/layout.html
+++ b/incident-db/templates/layout.html
@@ -21,6 +21,9 @@
 					<li>
 						<a href="/test">Test</a>
 					</li>
+					<li>
+						<a href="/test2">Test 2</a>
+					</li>
 				</ul>		
 			</div>
 			<div id="page-content-wrapper">
@@ -34,6 +37,7 @@
 				</div>
 				{% endblock %}
 			</div>
+
 		</div>
 	</body>
 </HTML>
