--- a/incident-db/templates/addevent.html
+++ b/incident-db/templates/addevent.html
@@ -18,17 +18,9 @@
 			<form action="{{ url_for('add_event_page') }}" method=post>
 				<div class="form-group">
 				<div class="row">
-					<div class="col-sm-12">
+					<div class="col-sm-5">
 						<dl>
-							<dt>Description:
-							<input type="text" class="form-control" name=description>
-						</dl>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-6">
-						<dl>
-							<dt>Date:
+							<dt>Event Date:
 							<div id='date_picker' class="input-group date">
 							 	<input type="text" class="form-control" name="date">
 								<span class="input-group-addon">
@@ -44,11 +36,20 @@
 					</script>
 			
 				</div>
+
+				<div class="row">
+					<div class="col-sm-12">
+						<dl>
+							<dt>Description:
+							<textarea type="text" rows=4 class="form-control" name=description></textarea>
+						</dl>
+					</div>
+				</div>
 				<div class="row">
 					<div class="col-lg-12">
 						<dl>
-						<dt>Tags
-						<textarea type"text" rows="4" name="tags" class="form-control"></textarea>
+						<dt>Tags:
+						<input type"text" name="tags" class="form-control">
 						</dl>
 					</div>
 				</div>
