--- a/incident-db/templates/addevent.html
+++ b/incident-db/templates/addevent.html
@@ -56,10 +56,16 @@
 				</div>
 
 				<div class="row">
-					<div class="col-sm-6">
-						<dd><input type="submit" value="Add"/>
+					<div class="col-sm-3">
+						<dd><input type="submit" value="Add" class="form-control"/>
 					</div>
+                    <div class = 'col-sm-3'>
+                        <a href="/json_upload"><input type="button" class="form-control" value="Upload File"/></a>
+                    </div>
+                    </form>
 				</div>
+                    
+                
 			</form>
 
 		</div>
