--- a/incident-db/templates/layout.html
+++ b/incident-db/templates/layout.html
@@ -35,6 +35,9 @@
 					<li>
 						<a href="/eventadd">Add Events</a>
 					</li>
+                    <li>
+                        <a href="/json">JSON</a>
+                    </li>
 				</ul>		
 			</div>
 			<div id="page-content-wrapper">
