added filter stuff

--- a/incident-db/templates/layout.html
+++ b/incident-db/templates/layout.html
@@ -35,9 +35,12 @@
 					<li>
 						<a href="/eventadd">Add Events</a>
 					</li>
-                    <li>
-                        <a href="/json">JSON</a>
-                    </li>
+					<li>
+						<a href="/json">JSON Dump</a>
+					</li>
+					<li>
+						<a href="/json-query">JSON</a>
+					</li>
 				</ul>		
 			</div>
 			<div id="page-content-wrapper">
