--- a/incident-db/templates/json_query.html
+++ b/incident-db/templates/json_query.html
@@ -1,6 +1,6 @@
 <HTML>
 	{% extends "layout.html" %}
-	{% block title %}Add Event{% endblock %}
+	{% block title %}Json Query{% endblock %}
 	{% block head %}
 		{{ super() }}
 
@@ -14,15 +14,15 @@
 		{% endblock %}
 	{% block content %}
 		<div class="container-fluid">
-			<h3>Add Event</h3>
-			<form action="{{ url_for('add_event_page') }}" method=post>
+			<h3>JSON Query</h3>
+			<form action="{{ url_for('json_query') }}" method=post>
 				<div class="form-group">
 				<div class="row">
 					<div class="col-sm-5">
 						<dl>
-							<dt>Event Date:
-							<div id='date_picker' class="input-group date">
-							 	<input type="text" class="form-control" name="date">
+							<dt>From:
+							<div id='from_date_picker' class="input-group date">
+							 	<input type="text" class="form-control" name="from_date">
 								<span class="input-group-addon">
 									<span class="glyphicon glyphicon-calendar"></span>
 								</span>
@@ -31,41 +31,53 @@
 					</div>
 					<script type="text/javascript">
 						$(function() {
-							$('#date_picker').datetimepicker();
+							$('#from_date_picker').datetimepicker();
 						});
 					</script>
-			
+					<div class="col-sm-5">
+						<dl>	
+							<dt>To:
+							<div id='to_date_picker' class="input-group date">
+								<input type="text" class="form-control" name="to_date">
+								<span class="input-group-addon">
+									<span class="glyphicon glyphicon-calendar"></span>
+								</span>
+							</div>
+						</dl>
+					</div>
+					<script type="text/javascript">
+						$(function() {
+							$('#to_date_picker').datetimepicker();
+						});
+					</script>	
 				</div>
 
+<!--Don't need this maybe.
 				<div class="row">
 					<div class="col-sm-12">
-						<dl>
+	 					<dl>
 							<dt>Description:
 							<textarea type="text" rows=4 class="form-control" name=description></textarea>
 						</dl>
 					</div>
 				</div>
+-->
 				<div class="row">
 					<div class="col-lg-12">
 						<dl>
-							<dt>Tag: </dt> 
-							<input type"text" name="tags" class="form-control">
-							(Seperate by semi-colon)
+						<dt>Tags:
+						<input type"text" name="tags" class="form-control">
 						</dl>
 					</div>
 				</div>
-				
 
 				<div class="row">
 					<div class="col-sm-3">
-						<input type="submit" value="Add" class="form-control"/>
+						<dd><input type="submit" value="Add" class="form-control"/>
 					</div>
-				    <div class = 'col-sm-3'>
-					    	<a href="/json_upload"><input type="button" class="form-control" value="Upload File"/></a>
-			    		</div>
 				</div>
 				</div>
-                
+     
 			</form>
 
 		</div>
