--- a/incident-db/templates/json_query.html
+++ b/incident-db/templates/json_query.html
@@ -66,14 +66,14 @@
 					<div class="col-lg-12">
 						<dl>
 						<dt>Tags:
-						<input type"text" name="tags" class="form-control">
+						<input type"text" name="tag" class="form-control">
 						</dl>
 					</div>
 				</div>
 
 				<div class="row">
 					<div class="col-sm-3">
-						<dd><input type="submit" value="Add" class="form-control"/>
+						<dd><input type="submit" value="Get JSON" class="form-control"/>
 					</div>
 				</div>
 				</div>
