--- a/incident-db/templates/main.html
+++ b/incident-db/templates/main.html
@@ -8,8 +8,8 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-lg-12">
-					<h1>Main</h1>
-					<p> Maybe dashboard can go here? </p>
+					<h1>Incident DB</h1>
+					
 				</div>
 			</div>
 		</div>
