changed support to accept timestamps

--- a/incident-db/templates/addevent.html
+++ b/incident-db/templates/addevent.html
@@ -31,7 +31,7 @@
 					</div>
 					<script type="text/javascript">
 						$(function() {
-							$('#date_picker').datetimepicker();
+							$('#date_picker').datetimepicker({format: 'MM/d/YYYY HH:mm'});
 						});
 					</script>
 			
