--- a/incident-db/templates/event_list.html
+++ b/incident-db/templates/event_list.html
@@ -28,7 +28,7 @@
 					</div>
 					<script type="text/javascript">
 						$(function() {
-							$('#from_date_picker').datetimepicker();
+							$('#from_date_picker').datetimepicker({format: 'MM/d/YYYY HH:mm'});
 						});
 					</script>
                     
@@ -45,7 +45,7 @@
 					</div>
 					<script type="text/javascript">
 						$(function() {
-							$('#to_date_picker').datetimepicker();
+							$('#to_date_picker').datetimepicker({format: 'MM/d/YYYY HH:mm'});
 						});
 					</script>
                             
