--- a/incident-db/templates/json_query.html
+++ b/incident-db/templates/json_query.html
@@ -31,7 +31,7 @@
 					</div>
 					<script type="text/javascript">
 						$(function() {
-							$('#from_date_picker').datetimepicker();
+							$('#from_date_picker').datetimepicker({format: 'DD/m/YYYY HH:mm'});
 						});
 					</script>
 					<div class="col-sm-5">
@@ -47,7 +47,7 @@
 					</div>
 					<script type="text/javascript">
 						$(function() {
-							$('#to_date_picker').datetimepicker();
+							$('#to_date_picker').datetimepicker({format: 'DD/m/YYYY HH:mm'});
 						});
 					</script>	
 				</div>
