--- a/templates/event_list.html
+++ b/templates/event_list.html
@@ -59,6 +59,7 @@
                     </div>
                             <div class="row">
                      <div class="col-sm-3">
+			     			<input type="hidden" name="page" value="1" class="form-control"/>
 						<input type="submit" value="Filter" class="form-control"/>
 					</div>
                                 </div>
@@ -90,8 +91,42 @@
                             {% endfor %}
                         </tbody>
                     </table>
+		
                     
-                </div>                     
+                </div>  
+		    		
+		<form action="{{url_for('event_search') }}" method=post>
+			<div class="row">
+				<input type="hidden" name="from_date" value="{{q['from_date']}}" />
+				<input type="hidden" name="to_date" value="{{q['to_date']}}" />
+				<input type="hidden" name="tag" value="{{q['tag']}}" />
+
+				<div class="col-md-1">
+					{% if q['page'] == '1': %}
+						
+
+						<button type ="submit" name="page" value="{{q['page']|int - 1}}" class="form-control" disabled><</button>
+					{% else: %}
+						<button type ="submit" name="page" value="{{q['page']|int - 1}}" class="form-control"><</button>
+					{% endif %}
+				</div>
+				{% for page in range(1, pc|int+1): %}
+				<div class="col-md-1">	
+					<button type="submit" name="page" value="{{page}}" class="form-control">{{page}}</button>
+				</div>
+				{% endfor %}
+				<div class="col-md-1">
+					{% if q['page'] == (pc|string): %}
+						<button type="submit" name="page" value="{{q['page']|int + 1}}" class="form-control" disabled>></button>
+					{% else: %}
+						<button type="submit" name="page" value="{{q['page']|int + 1}}" class="form-control">></button>
+					{% endif %}
+				</div>
+
+			</div>
+		
+		</form>
 		</div>
+
 	{% endblock %}
 </HTML>
